WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114299
[GTK] --minimal build fails with error: class WebCore::EventHandler' has no member named 'dragSourceEndedAt
https://bugs.webkit.org/show_bug.cgi?id=114299
Summary
[GTK] --minimal build fails with error: class WebCore::EventHandler' has no m...
Ed Bartosh
Reported
2013-04-09 12:08:15 PDT
Here is the error: Failed to run "['Tools/Scripts/build-webkit', '--release', '--gtk', '--update-gtk', '--no-webkit2', '--makeargs="-j2"']" exit_code: 2 orm/gtk/libPlatformGtk_la-ContextMenuItemGtk.lo In file included from ./autotoolsconfig.h:254:0, from ../../Source/WebCore/config.h:26, from ../../Source/WebKit/gtk/webkit/webkitwebview.cpp:31: ./WebKitFeatures.h:92:0: warning: "ENABLE_SPELLCHECK" redefined [enabled by default] In file included from ../../Source/WebCore/config.h:26:0, from ../../Source/WebKit/gtk/webkit/webkitwebview.cpp:31: ./autotoolsconfig.h:19:0: note: this is the location of the previous definition ../../Source/WebKit/gtk/webkit/webkitwebview.cpp: In function 'void webkit_web_view_drag_end(GtkWidget*, GdkDragContext*)': ../../Source/WebKit/gtk/webkit/webkitwebview.cpp:1524:28: error: 'class WebCore::EventHandler' has no member named 'dragSourceEndedAt' ../../Source/WebKit/gtk/webkit/webkitwebview.cpp: In function 'void dragExitedCallback(GtkWidget*, WebCore::DragData*, bool)': ../../Source/WebKit/gtk/webkit/webkitwebview.cpp:1537:128: error: 'class WebCore::Page' has no member named 'dragController' ../../Source/WebKit/gtk/webkit/webkitwebview.cpp:1538:124: error: 'class WebCore::Page' has no member named 'dragController' ../../Source/WebKit/gtk/webkit/webkitwebview.cpp: In function 'gboolean webkit_web_view_drag_motion(GtkWidget*, GdkDragContext*, gint, gint, guint)': ../../Source/WebKit/gtk/webkit/webkitwebview.cpp:1555:46: error: 'class WebCore::Page' has no member named 'dragController' ../../Source/WebKit/gtk/webkit/webkitwebview.cpp: In function 'void webkit_web_view_drag_data_received(GtkWidget*, GdkDragContext*, gint, gint, GtkSelectionData*, guint, guint)': ../../Source/WebKit/gtk/webkit/webkitwebview.cpp:1569:46: error: 'class WebCore::Page' has no member named 'dragController' ../../Source/WebKit/gtk/webkit/webkitwebview.cpp: In function 'gboolean webkit_web_view_drag_drop(GtkWidget*, GdkDragContext*, gint, gint, guint)': ../../Source/WebKit/gtk/webkit/webkitwebview.cpp:1582:20: error: 'class WebCore::Page' has no member named 'dragController' make[1]: *** [Source/WebKit/gtk/webkit/libwebkitgtk_3_0_la-webkitwebview.lo] Error 1 make[1]: *** Waiting for unfinished jobs.... In file included from ./autotoolsconfig.h:254:0, from ../../Source/JavaScriptCore/config.h:26, from ../../Source/WebCore/platform/gtk/ContextMenuItemGtk.cpp:21: ./WebKitFeatures.h:92:0: warning: "ENABLE_SPELLCHECK" redefined [enabled by default] In file included from ../../Source/JavaScriptCore/config.h:26:0, from ../../Source/WebCore/platform/gtk/ContextMenuItemGtk.cpp:21: ./autotoolsconfig.h:19:0: note: this is the location of the previous definition make[1]: Leaving directory `/srv/ews/WebKit/WebKitBuild/Release' make: *** [all] Error 2
Attachments
Patch
(3.73 KB, patch)
2013-04-11 14:44 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(3.99 KB, patch)
2013-04-13 04:42 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(4.01 KB, patch)
2013-04-29 10:41 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ed Bartosh
Comment 1
2013-04-11 14:44:04 PDT
Created
attachment 197674
[details]
Patch
Philippe Normand
Comment 2
2013-04-12 12:58:51 PDT
Comment on
attachment 197674
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=197674&action=review
> Source/WebKit/gtk/webkit/webkitwebview.cpp:3111 > +#endif
I think you need an #else here to set the drag_* to NULL.
Ed Bartosh
Comment 3
2013-04-13 04:42:37 PDT
Created
attachment 197934
[details]
Patch
Ed Bartosh
Comment 4
2013-04-13 04:43:37 PDT
Updated according to reviewer's suggestions.
Ed Bartosh
Comment 5
2013-04-29 10:41:45 PDT
Created
attachment 200026
[details]
Patch
WebKit Commit Bot
Comment 6
2013-04-30 08:57:43 PDT
Comment on
attachment 200026
[details]
Patch Clearing flags on attachment: 200026 Committed
r149371
: <
http://trac.webkit.org/changeset/149371
>
WebKit Commit Bot
Comment 7
2013-04-30 08:57:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug