[GTK] --minimal build fails with error: class WebCore::EventHandler' has no member named 'dragSourceEndedAt https://bugs.webkit.org/show_bug.cgi?id=114299

Patch by Ed Bartosh <bartosh@gmail.com> on 2013-04-30
Reviewed by Martin Robinson.

Wrapped code, related to drag&drop in #if ENABLE(DRAG_SUPPORT)

* webkit/webkitwebview.cpp:
(webkit_web_view_class_init):
(webkit_web_view_init):

Canonical link: https://commits.webkit.org/133854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149371 268f45cc-cd09-0410-ab3c-d52691b4dbfc